--- a/vignettes/v7-audit-sampling-evaluation.Rmd
+++ b/vignettes/v7-audit-sampling-evaluation.Rmd
@@ -16,7 +16,6 @@ vignette: >
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, fig.height = 4, fig.width = 6)
-set.seed(1)
 library(jfa)
 ```
 
@@ -175,13 +174,11 @@ graphics::arrows(x0 = 1:20, x1 = 1:20, y1 = result_pp$strat$lb, y0 = result_pp$s
 
 ## Evaluation using data
 
-For this example, we take the `BuildIt` that set that comes with the package. This data set contains 3500 financial statement line items, each with a booked value `bookValue` and, for illustrative purposes, and audited (true) value `auditValue`. Since the focus of this vignette is the evaluation stage in the audit, the first 300 items are selected as an example. The performance materiality in this example is set to 5%.
+For this example, we take the `allowances` that set that comes with the package. This data set contains 3500 financial statement line items, each with a booked value `bookValue` and, for illustrative purposes, and audited (true) value `auditValue`. Since the focus of this vignette is the evaluation stage in the audit, the sample is already indicated in the data set. The performance materiality in this example is set to 5%.
 
 ```{r}
-data(BuildIt)
-BuildIt$inSample <- c(rep(1, 300), rep(0, 3200)) # For illustrative purposes
-sample <- subset(BuildIt, BuildIt$inSample == 1)
-head(sample)
+data(allowances)
+head(allowances)
 ```
 
 ### Non-stratified samples
@@ -190,10 +187,10 @@ Evaluating a non-stratified sample using data requires specification of the `dat
 
 #### Classical evaluation
 
-The call below evaluates the `BuildIt` sample using a classical non-stratified evaluation procedure.
+The call below evaluates the `allowances` sample using a classical non-stratified evaluation procedure.
 
 ```{r}
-x <- evaluation(materiality = 0.05, data = sample, values = "bookValue", values.audit = "auditValue")
+x <- evaluation(materiality = 0.05, data = allowances, values = "bookValue", values.audit = "auditValue", times = "times")
 summary(x)
 ```
 
@@ -201,11 +198,11 @@ In this case, the output shows that the population estimate is 1.8% with a 95% (
 
 #### Bayesian evaluation
 
-The call below evaluates the `BuildIt` sample using a Bayesian non-stratified evaluation procedure.
+The call below evaluates the `allowances` sample using a Bayesian non-stratified evaluation procedure.
 
 ```{r}
 prior <- auditPrior(method = "default")
-x <- evaluation(materiality = 0.05, data = sample, values = "bookValue", values.audit = "auditValue", prior = prior)
+x <- evaluation(materiality = 0.05, data = allowances, values = "bookValue", values.audit = "auditValue", times = "times", prior = prior)
 summary(x)
 ```
 
@@ -213,33 +210,25 @@ The output shows that the population estimate is 1.8% with a 95% (one-sided) cre
 
 ### Stratified samples
 
-As an example, we add a stratum indicator to the `BuildIt` data set to indicate stratum membership of the line items. Here, each line item comes from one of three branches of the auditee.
-
-```{r}
-BuildIt$stratum <- factor(c("Branch 1", "Branch 2", rep(c("Branch 3", "Branch 1", "Branch 2"), times = 1166)))
-sample <- subset(BuildIt, BuildIt$inSample == 1)
-head(sample)
-```
-
 Evaluating a stratified sample using data requires specification of the `data`, `values`, `values.audit` and `strata` arguments. The number of units per stratum in the population should be provided with `N.units` to weigh the stratum estimates and arrive at a representative population estimate.
 
 #### Classical evaluation
 
-The call below evaluates the `BuildIt` sample using a classical stratified evaluation procedure.
+The call below evaluates the `allowances` sample using a classical stratified evaluation procedure.
 
 ```{r}
-x <- evaluation(materiality = 0.05, data = sample, values = "bookValue", values.audit = "auditValue", strata = "stratum", alternative = "two.sided", N.units = as.numeric(table(BuildIt$stratum)))
+x <- evaluation(materiality = 0.05, data = allowances, values = "bookValue", values.audit = "auditValue", strata = "branch", times = "times", alternative = "two.sided", N.units = as.numeric(table(allowances$branch)))
 summary(x)
 ```
 
 In this case, the output shows that the population estimate is 2.50% with a 95% confidence interval ranging from 1.22% to 4.96%. The stratum estimates can be seen in the output of the `summary()` function and are visualized below.
 
 ```{r, echo = FALSE}
-plot(1:3, x$strata$mle, pch = 19, ylim = c(0, 0.1), las = 1, main = "Stratum estimates", ylab = "Misstatement", xlab = "Stratum", axes = FALSE)
-graphics::axis(side = 1, at = 1:3)
-graphics::axis(side = 2, at = seq(0, 0.10, length.out = 6), las = 1)
-graphics::arrows(x0 = 1:3, x1 = 1:3, y0 = x$strata$lb, y1 = x$strata$ub, angle = 90, length = 0.05)
-graphics::arrows(x0 = 1:3, x1 = 1:3, y1 = x$strata$lb, y0 = x$strata$ub, angle = 90, length = 0.05)
+plot(1:16, x$strata$mle, pch = 19, ylim = c(0, 1), las = 1, main = "Stratum estimates", ylab = "Misstatement", xlab = "Stratum", axes = FALSE)
+graphics::axis(side = 1, at = 1:16)
+graphics::axis(side = 2, at = seq(0, 1, length.out = 6), las = 1)
+graphics::arrows(x0 = 1:16, x1 = 1:16, y0 = x$strata$lb, y1 = x$strata$ub, angle = 90, length = 0.05)
+graphics::arrows(x0 = 1:16, x1 = 1:16, y1 = x$strata$lb, y0 = x$strata$ub, angle = 90, length = 0.05)
 ```
 
 #### Bayesian evaluation
@@ -248,18 +237,18 @@ Bayesian inference can improve the stratum estimates by specifying a prior distr
 
 ```{r}
 prior <- auditPrior(method = "arm", materiality = 0.05, ir = 0.5, cr = 0.5)
-x <- evaluation(materiality = 0.05, data = sample, values = "bookValue", values.audit = "auditValue", strata = "stratum", alternative = "two.sided", N.units = as.numeric(table(BuildIt$stratum)), prior = prior)
+x <- evaluation(materiality = 0.05, data = allowances, values = "bookValue", values.audit = "auditValue", strata = "branch", times = "times", alternative = "two.sided", N.units = as.numeric(table(allowances$branch)), prior = prior)
 summary(x)
 ```
 
 The output shows that the population estimate is 1.89% with a 95% credible interval ranging from 0.98% to 3.92%. The stratum estimates can be seen in the output of the `summary()` function and are visualized below.
 
 ```{r, echo = FALSE}
-plot(1:3, x$strata$mle, pch = 19, ylim = c(0, 0.1), las = 1, main = "Stratum estimates", ylab = "Misstatement", xlab = "Stratum", axes = FALSE)
-graphics::axis(side = 1, at = 1:3)
-graphics::axis(side = 2, at = seq(0, 0.10, length.out = 6), las = 1)
-graphics::arrows(x0 = 1:3, x1 = 1:3, y0 = x$strata$lb, y1 = x$strata$ub, angle = 90, length = 0.05)
-graphics::arrows(x0 = 1:3, x1 = 1:3, y1 = x$strata$lb, y0 = x$strata$ub, angle = 90, length = 0.05)
+plot(1:16, x$strata$mle, pch = 19, ylim = c(0, 1), las = 1, main = "Stratum estimates", ylab = "Misstatement", xlab = "Stratum", axes = FALSE)
+graphics::axis(side = 1, at = 1:16)
+graphics::axis(side = 2, at = seq(0, 1, length.out = 6), las = 1)
+graphics::arrows(x0 = 1:16, x1 = 1:16, y0 = x$strata$lb, y1 = x$strata$ub, angle = 90, length = 0.05)
+graphics::arrows(x0 = 1:16, x1 = 1:16, y1 = x$strata$lb, y0 = x$strata$ub, angle = 90, length = 0.05)
 ```
 
 ## References
